Added a banner and styled it.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <!-- Home Page Section -->
   <section id="home-section" class="page">
+    <div class="home-page-banner">
+        
+    </div>
     <h1>Welcome to MyShop</h1>
     <p>Find the best products at unbeatable prices!</p>
     <button id="browse-products">Browse Products</button>
@@ -29,7 +32,7 @@
     <h1>Products</h1>
     <div class="product-list">
       <!-- Product 1 -->
-      <div class="product-card">
+      <div href="product-details.html" class="product-card">
         <img src="https://via.placeholder.com/150" alt="Product 1">
         <h2>Product 1</h2>
         <p>$10.00</p>
@@ -38,7 +41,7 @@
 
       <!-- Product 2 -->
       <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 2">
+        <img src="https://via.placeholder.com/150" alt="Product 2"> 
         <h2>Product 2</h2>
         <p>$20.00</p>
         <button class="add-to-cart" data-price="20">Add to Cart</button>
