--- a/index.html
+++ b/index.html
@@ -4,66 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-commerce Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Header Section -->
   <header class="header">
-    <div class="logo">MyShop</div>
+    <div class="logo">
+        <img src="./public/images/myLogo.png" alt="Logo">
+        <h1>Goods</h1>
+    </div>
     <div class="nav">
       <button id="home-btn">Home</button>
-      <button id="products-btn">Products</button>
-      <button id="cart-btn">Cart (0)</button>
+      <button id="shop-btn">Shop</button>
+      <button id="blog-btn">Blog</button>
+      <button id="contact-btn">Contact</button>
+      <button id="cart-btn" class="cart-btn">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <span>0</span>
+      </button>
     </div>
   </header>
 
   <!-- Home Page Section -->
   <section id="home-section" class="page">
     <div class="home-page-banner">
-        
+        <img src="public/images/myLogo.png" alt="">
     </div>
     <h1>Welcome to MyShop</h1>
     <p>Find the best products at unbeatable prices!</p>
     <button id="browse-products">Browse Products</button>
+    <section id="products-section">
+        <h1>Products</h1>
+        <div class="product-list">
+          <!-- Product 1 -->
+          <div class="product-card">
+            <a href="./product-details.html">
+                <img src="./public/images/cutlary-set/s-zoom.file" alt="Product 1">
+            </a>
+            <h2>Product 1</h2>
+            <p>$10.00</p>
+            <button class="add-to-cart" data-price="10">Add to Cart</button>
+          </div>
+        </div>
+      </section>
   </section>
-
-  <!-- Product Listing Section -->
-  <section id="products-section" class="page hidden">
-    <h1>Products</h1>
-    <div class="product-list">
-      <!-- Product 1 -->
-      <div href="product-details.html" class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 1">
-        <h2>Product 1</h2>
-        <p>$10.00</p>
-        <button class="add-to-cart" data-price="10">Add to Cart</button>
-      </div>
-
-      <!-- Product 2 -->
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 2"> 
-        <h2>Product 2</h2>
-        <p>$20.00</p>
-        <button class="add-to-cart" data-price="20">Add to Cart</button>
-      </div>
-
-      <!-- Product 3 -->
-      <div class="product-card">
-        <img src="https://via.placeholder.com/150" alt="Product 3">
-        <h2>Product 3</h2>
-        <p>$30.00</p>
-        <button class="add-to-cart" data-price="30">Add to Cart</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- Cart Section -->
-  <section id="cart-section" class="page hidden">
-    <h1>Your Cart</h1>
-    <div id="cart-items"></div>
-    <p id="total-price">Total: $0.00</p>
-    <button id="checkout-btn">Checkout</button>
-  </section>
+    
 
   <!-- Footer Section -->
   <footer class="footer">
