Created a hero section.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,27 @@
 
   <!-- Home Page Section -->
   <section id="home-section" class="page">
-    <div class="home-page-banner">
+    <section class="heroSection">
+      <div class="heroText">
+        <h4>Trade-in-offer</h4>
+        <h1>Super value deals</h1>
+        <h1>On all products</h1>
+        <p>Save more with coupons & up to 70% off!</p>
+        <button class="button2">Shop Now</button>
+      </div>
+      <div class="heroImage"></div>
+    </section>
+
+    <section class="home-page-banner">
         <img src="public/images/myLogo.png" alt="">
-    </div>
-    <h1>Welcome to MyShop</h1>
-    <p>Find the best products at unbeatable prices!</p>
-    <button id="browse-products">Browse Products</button>
+    </section>
+
+    <section>
+      <h1>Welcome to MyShop</h1>
+      <p>Find the best products at unbeatable prices!</p>
+      <button id="browse-products">Browse Products</button>
+    </section>
+
     <section id="products-section">
         <h1>Products</h1>
         <div class="product-list">
@@ -49,7 +64,7 @@
             <button class="add-to-cart" data-price="10">Add to Cart</button>
           </div>
         </div>
-      </section>
+    </section>
   </section>
     
 
